k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - image: quay.io/zoran_krleza/mynginx
        name:  webapp
        ports:
        - containerPort: 80
          name: http
